crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__year__multiple__specifier_periodic__range_periodic.snap
---
source: crates/tools/cron/src/tests/unit/year.rs
expression: result
---
Ok(
    (
        "",
        YearRule {
            kinds: [
                YearKind {
                    range: (
                        Year(
                            2024,
                        ),
                        Year(
                            2024,
                        ),
                    ),
                    periodic: YearPeriodic(
                        2,
                    ),
                },
                YearKind {
                    range: (
                        Year(
                            2026,
                        ),
                        Year(
                            2028,
                        ),
                    ),
                    periodic: YearPeriodic(
                        2,
                    ),
                },
            ],
        },
    ),
)
